# intent_recognizer

./: .gitmodules  CMakeLists.txt  README.md
etc/: config.json  templates.txt
src/: CMakeLists.txt  Classifier.cpp  Classifier.h  Config.cpp  Config.h  EntitiesFinder.cpp  EntitiesFinder.h  IntentRecognizer.cpp  IntentRecognizer.h  Preprocessor.cpp  Preprocessor.h  main.cpp
test/: CMakeLists.txt  IntentRecognizerTest.cpp  PreprocessorTest.cpp  main.cpp
test/etc/: train.csv
